fix text alignment

--- a/chromeExt/style.css
+++ b/chromeExt/style.css
@@ -1,5 +1,6 @@
 .byslexic {
   font-family: "Byslexic" !important;
+  text-align: left !important;
 }
 
 @font-face {
